--- a/styles/main.css
+++ b/styles/main.css
@@ -1739,7 +1739,7 @@ input {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-      grid-template-areas: "first   first   fifth sixth" "second  third   fifth seventh" "fourth  fourth  eighth eighth";
+      grid-template-areas: "first   first   fifth sixth" "second  third   fifth seventh" "fourth  fourth  eighth eighth";
   gap: 2.5rem;
 }
 
@@ -1879,13 +1879,13 @@ input {
     -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[2];
         grid-template: auto/repeat(2, 1fr);
-        grid-template-areas: "first   first" "first   first" "second  third" "second  third" "fourth  fourth" "fourth  fourth";
+        grid-template-areas: "first   first" "first   first" "second  third" "second  third" "fourth  fourth" "fourth  fourth";
   }
   .products__right-columns {
     -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[2];
         grid-template: auto/repeat(2, 1fr);
-        grid-template-areas: "fifth sixth " "fifth sixth " "fifth seventh" "fifth seventh" "eighth eighth";
+        grid-template-areas: "fifth sixth " "fifth sixth " "fifth seventh" "fifth seventh" "eighth eighth";
     gap: 1rem;
     border-radius: 2rem;
   }
@@ -3139,7 +3139,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 1rem;
-      grid-template-areas: 'img' 'description' 'footer';
+      grid-template-areas: 'img' 'description' 'footer';
 }
 
 .swiper-card__products.list {
@@ -3249,7 +3249,7 @@ input {
   .swiper-card__products {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-        grid-template-areas: 'img description' 'img  description' 'img  footer';
+        grid-template-areas: 'img description' 'img  description' 'img  footer';
     gap: 20px;
   }
   .swiper-card__price {
@@ -3310,7 +3310,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 2rem;
-      grid-template-areas: "foto description" "foto main" "foto calculation" "foto .. ";
+      grid-template-areas: "foto description" "foto main" "foto calculation" "foto .. ";
   margin-top: 2rem;
 }
 
@@ -3568,7 +3568,7 @@ input {
 
 @media screen and (max-width: 1100px) {
   .card__main {
-        grid-template-areas: "description description" "foto foto" "foto foto" "main main" "calculation calculation";
+        grid-template-areas: "description description" "foto foto" "foto foto" "main main" "calculation calculation";
   }
   .card__header-title {
     width: 630px;
@@ -4614,6 +4614,7 @@ input {
 
 .account__form-wrapp {
   max-width: 1019px;
+  margin-bottom: 3rem;
 }
 
 .account__required {
@@ -4824,9 +4825,9 @@ input {
 }
 
 .account__title {
-  font-size: 2.2rem;
+  font-size: 22px;
   font-weight: 900;
-  margin: 3rem 0 5rem 0;
+  margin: 5rem 0 5rem 0;
 }
 
 .account__personal-data-inputs {
@@ -4893,7 +4894,7 @@ input {
   border: 1px solid #07c47f;
   color: #07c47f;
   min-width: 26rem;
-  min-height: 6rem;
+  min-height: 5rem;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   border-radius: 32px;
@@ -5051,6 +5052,7 @@ input {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin-bottom: 3rem;
 }
 
 .account__password-create-new input {
@@ -5630,7 +5632,7 @@ input {
   text-align: left;
 }
 
-@media (min-width: 480px) {
+@media (min-width: 1100px) {
   .history-diteal__table th,
   .history-diteal__table td {
     display: table-cell;
@@ -5717,6 +5719,37 @@ input {
       -ms-flex-direction: column;
           flex-direction: column;
   min-height: 26rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .history-diteal__footer {
+    margin-bottom: 5rem;
+  }
+  .history-diteal__footer-content-block {
+    margin-top: 8rem;
+    margin-right: 5rem;
+  }
+  .history-diteal__header--num {
+    font-size: 14px;
+    font-weight: 900;
+  }
+  .history-diteal__product {
+    min-height: 20rem;
+    min-width: 100%;
+  }
+  .history-diteal__product--title {
+    font-size: 14px;
+    line-height: 3rem;
+    margin-left: 0.5rem;
+    margin-bottom: 1rem;
+    min-width: 100%;
+  }
+  .history-diteal__product--subtitle {
+    margin-left: 1rem;
+    line-height: 3rem;
+    font-size: 12px;
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -6536,7 +6569,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 16px;
-      grid-template-areas: 'img' 'description' 'footer';
+      grid-template-areas: 'img' 'description' 'footer';
 }
 
 .favorite-product__img-block {
@@ -6775,7 +6808,7 @@ input {
   .favorite-product {
     border-bottom: 1px solid #d2d2d2;
     padding: 20px 0;
-        grid-template-areas: 'img description' 'img description' 'img footer' 'img footer';
+        grid-template-areas: 'img description' 'img description' 'img footer' 'img footer';
     -webkit-column-gap: 3rem;
             column-gap: 3rem;
   }
@@ -7795,7 +7828,7 @@ input {
     padding: 1.5rem;
   }
   .feedback__form {
-        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
+        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
     gap: 4rem;
   }
   .feedback__form input {
@@ -8066,7 +8099,7 @@ input {
     padding: 1.5rem;
   }
   .write-review__form {
-        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
+        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
     gap: 4rem;
   }
   .write-review__form input {
@@ -8402,7 +8435,7 @@ input {
 .shoping-cart__footer input[type='text'] {
   border: 1px solid #cfcfcf;
   border-radius: 3px;
-  min-height: 45px;
+  min-height: 50px;
   min-width: 30rem;
   font-size: 1.4rem;
   background-clip: padding-box;
@@ -8497,15 +8530,35 @@ input {
 
 @media screen and (max-width: 1100px) {
   .shoping-cart__picker {
-    width: 11.5rem;
-    height: 4.5rem;
+    width: 115px;
+    height: 40px;
+  }
+  .shoping-cart__delete {
+    visibility: hidden;
+    z-index: -10000;
+    max-height: 0.1rem;
   }
   .shoping-cart__delete-icon {
-    width: 1.7rem;
-    height: 1.9rem;
+    display: none;
   }
   .shoping-cart__footer-content {
-    width: 60%;
+    width: 65%;
+  }
+  .shoping-cart__list p {
+    font-size: 14px;
+    margin-bottom: 2rem;
+  }
+  .shoping-cart__cost p {
+    font-size: 18px;
+    font-weight: bold;
+  }
+  .shoping-cart__checkout-btn {
+    width: 180px !important;
+    height: 50px !important;
+  }
+  .shoping-cart__checkout-btn span {
+    width: 100%;
+    font-size: 16px;
   }
 }
 
@@ -9088,7 +9141,7 @@ input {
 .login-modal__content {
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "title title" "label-email label-email" "input-email input-email" "label-pass remind" "input-pass input-pass" "btn-block btn-block";
+      grid-template-areas: "title title" "label-email label-email" "input-email input-email" "label-pass remind" "input-pass input-pass" "btn-block btn-block";
   position: relative;
   background: #fff;
   width: 480px;
@@ -9800,7 +9853,7 @@ input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-height: 16rem;
+  padding-bottom: 5rem;
 }
 
 .registration__natural-person {
@@ -9874,7 +9927,6 @@ input {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    min-height: 16rem;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
@@ -9884,6 +9936,14 @@ input {
   }
   .registration__legal-person {
     width: 345px;
+  }
+  .registration__registration-btn {
+    width: 270px;
+    height: 50px;
+    margin: 2rem 0;
+  }
+  .registration__registration-btn span {
+    text-decoration: none !important;
   }
 }
 
@@ -10042,6 +10102,250 @@ input {
 @media screen and (max-width: 480px) {
   .search-page__result-item {
     font-size: 12px;
+  }
+}
+
+.checkout {
+  margin-bottom: 5rem;
+}
+
+.checkout__nav-link {
+  min-width: 35.8rem;
+}
+
+.checkout__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem 0 4rem 0;
+  border-bottom: 1px solid #cfcfcf;
+}
+
+.checkout__header button {
+  background-color: #fff;
+}
+
+.checkout__header button :hover {
+  opacity: 0.8;
+}
+
+.checkout__person-title-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 485px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.checkout__person-title-wrap p {
+  margin-top: 0;
+}
+
+.checkout__person-title-wrap button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #fff;
+  color: #07c47f;
+  font-size: 16px;
+  height: 2.5rem;
+  width: 13.5rem;
+}
+
+.checkout__person-title-wrap button span {
+  margin-left: 1rem;
+}
+
+.checkout__radio-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 5rem;
+}
+
+.checkout__radio-block div {
+  padding-top: 2rem;
+  line-height: 2.5rem;
+  min-height: 140px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 1px dashed rgba(204, 201, 201, 0.5);
+  margin-right: 0rem;
+}
+
+.checkout__radio-block div label {
+  font-weight: 100;
+  font-size: 16px;
+}
+
+.checkout__radio-block div span {
+  margin-left: 8px;
+  font-weight: 900;
+  font-size: 16px;
+}
+
+.checkout__radio-block div a {
+  margin-left: 23px;
+  text-decoration: underline;
+  opacity: 0.5;
+  font-size: 16px;
+}
+
+.checkout__punkt-input {
+  visibility: hidden;
+  margin-bottom: 3rem;
+  position: absolute;
+  width: 670px;
+}
+
+.checkout__punkt-input label {
+  margin-bottom: 2rem;
+}
+
+.checkout__punkt-input input {
+  width: 100%;
+}
+
+.checkout__add-new-address {
+  margin-bottom: 3rem;
+}
+
+.checkout__devilery-address {
+  display: none;
+}
+
+.checkout__punkt-btn {
+  width: 110px;
+  height: 30px;
+  position: absolute;
+  right: 10px;
+  top: 45px;
+}
+
+.checkout__punkt-btn span {
+  font-size: 14px;
+}
+
+.checkout__hospital-input {
+  margin-bottom: 5rem;
+}
+
+.checkout__pay-icons {
+  min-height: 50px;
+  margin-bottom: 5rem;
+}
+
+.checkout__border-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid rgba(204, 201, 201, 0.5);
+  height: 50px;
+  width: 150px;
+}
+
+.checkout__footer {
+  margin-top: 5rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .checkout__border-icon {
+    width: 220px;
+  }
+  .checkout__radio-block {
+    margin-bottom: 5rem;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    gap: 45px;
+  }
+  .checkout__cost-calculation {
+    margin-top: 3rem;
+    font-size: 16px;
+  }
+  .checkout__add-new-address {
+    margin-bottom: 5rem;
+  }
+  .checkout__punkt-input {
+    width: 100%;
+  }
+  .checkout__punkt-input input {
+    width: 100%;
+  }
+  .checkout__punkt-btn {
+    top: 38px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .checkout__nav-link {
+    min-width: 280px;
+  }
+  .checkout__punkt-input {
+    margin: 3rem 0;
+    position: relative;
+    width: 100%;
+  }
+  .checkout__punkt-input input {
+    width: 100%;
+  }
+  .checkout__punkt-btn {
+    top: 32px;
+  }
+  .checkout__radio-block div {
+    line-height: 4rem;
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .checkout__radio-block a {
+    line-height: 6rem;
+  }
+  .checkout__border-icon {
+    width: 100%;
+  }
+  .checkout__header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .checkout__header button {
+    margin-top: 3rem;
+  }
+  .checkout__header button span {
+    margin-left: 0rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
