--- a/styles/main.scss
+++ b/styles/main.scss
@@ -123,3 +123,6 @@
 @import "../styles/components/search-empty";
 @import "../styles/components/search-page";
 
+// checkout page
+
+@import "../styles/components/checkout"
