fix: line height

--- a/styles/components/_remind-password.scss
+++ b/styles/components/_remind-password.scss
@@ -95,6 +95,7 @@
     &__text {
         font-size: 16px;
         margin-bottom: 5.5rem;
+        line-height: 3rem;
         &-hide {
             color: #B8B8B8;
             width: 105px;
@@ -147,6 +148,7 @@
     }
     &__text {
         font-size: 14px;
+        line-height: 4rem;
     }
     }
 }
