add: chevrone animation

--- a/styles/main.css
+++ b/styles/main.css
@@ -794,6 +794,12 @@ input {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
+  .accordion__icon {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
   .card__accordion {
     -webkit-transition: all 0.5s ease 0s;
     transition: all 0.5s ease 0s;
