--- a/styles/components/_accordion.scss
+++ b/styles/components/_accordion.scss
@@ -95,6 +95,10 @@
         transition: all 0.5s ease 0s;
         display: flex;
         justify-content: space-between;
+        &__icon {
+            transform: rotate(90deg);
+            transition: all 0.3s ease 0s;
+        }
     }
 
     .card__accordion {
