--- a/styles/main.css
+++ b/styles/main.css
@@ -9127,7 +9127,7 @@ input {
 .login-modal {
   display: none;
   z-index: 3000;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
@@ -9331,7 +9331,7 @@ input {
 @media screen and (max-width: 480px) {
   .login-modal__content {
     width: 100%;
-    height: 110%;
+    height: 100%;
     min-width: 320px;
     max-width: 480px;
     padding: 34rem 2rem;
@@ -9359,9 +9359,6 @@ input {
     height: 45px;
     font-size: 14px;
     border-radius: 32px;
-  }
-  .login-modal__btn-close {
-    margin: 52px 22px 0 0;
   }
   .login-modal__password-block img, .login-modal__email-block img {
     top: 20%;
