--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -33,6 +33,7 @@
             border-radius: 4px;
             & span {
                 transform: rotate(90deg);
+                transition: all 0.3s ease 0s;
             }
             &--title {
                 cursor: pointer;
