--- a/styles/main.css
+++ b/styles/main.css
@@ -8946,6 +8946,8 @@ input {
 .about .mobile-aside__link span {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 .about .mobile-aside__link--title {
