refactor: refactor drop-down

--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -23,7 +23,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        left: 42.7rem;
+        left: 427px;
         z-index: -1;
         border-bottom-left-radius: 2rem;
         border-bottom-right-radius: 2rem;
