--- a/styles/main.css
+++ b/styles/main.css
@@ -406,7 +406,7 @@ input {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  left: 42.7rem;
+  left: 427px;
   z-index: -1;
   border-bottom-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
