--- a/styles/components/_search-empty.scss
+++ b/styles/components/_search-empty.scss
@@ -36,6 +36,7 @@
             height: 50px;
             background: #EFF1F5;
             padding-left: 6.5rem;
+            padding-right: 1rem;
             &:hover {
                 background: #cfd0d7;
             }
