--- a/styles/main.css
+++ b/styles/main.css
@@ -257,12 +257,17 @@ input {
   font: caption;
   font-weight: 200;
   width: 60rem;
-  height: 5rem;
-  border-radius: 2.5rem;
+  height: 50px;
+  border-radius: 25px;
   background-color: #f0f1f5;
   padding: 0 2rem 0 5rem;
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
+}
+
+.search__input.open {
+  width: 100%;
+  height: 40px;
 }
 
 .search__input:hover {
@@ -538,6 +543,10 @@ input {
           align-items: center;
   cursor: pointer;
   margin-right: 4rem;
+}
+
+.logo.hide {
+  display: none;
 }
 
 @media screen and (max-width: 1100px) {
@@ -1223,6 +1232,11 @@ input {
   display: none;
 }
 
+.header__search.open {
+  display: block;
+  width: 85%;
+}
+
 .header__top {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1292,6 +1306,9 @@ input {
   .header__icons-buttons {
     width: 50rem;
   }
+  .header__icons-buttons.hide {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -1303,6 +1320,10 @@ input {
   }
   .header__top {
     min-height: 12rem;
+  }
+  .header__search.open {
+    display: block;
+    width: 70%;
   }
 }
 
@@ -1745,7 +1766,7 @@ input {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-      grid-template-areas: "first   first   fifth sixth" "second  third   fifth seventh" "fourth  fourth  eighth eighth";
+      grid-template-areas: "first   first   fifth sixth" "second  third   fifth seventh" "fourth  fourth  eighth eighth";
   gap: 2.5rem;
 }
 
@@ -1885,13 +1906,13 @@ input {
     -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[2];
         grid-template: auto/repeat(2, 1fr);
-        grid-template-areas: "first   first" "first   first" "second  third" "second  third" "fourth  fourth" "fourth  fourth";
+        grid-template-areas: "first   first" "first   first" "second  third" "second  third" "fourth  fourth" "fourth  fourth";
   }
   .products__right-columns {
     -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[2];
         grid-template: auto/repeat(2, 1fr);
-        grid-template-areas: "fifth sixth " "fifth sixth " "fifth seventh" "fifth seventh" "eighth eighth";
+        grid-template-areas: "fifth sixth " "fifth sixth " "fifth seventh" "fifth seventh" "eighth eighth";
     gap: 1rem;
     border-radius: 2rem;
   }
@@ -3145,7 +3166,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 1rem;
-      grid-template-areas: 'img' 'description' 'footer';
+      grid-template-areas: 'img' 'description' 'footer';
 }
 
 .swiper-card__products.list {
@@ -3255,7 +3276,7 @@ input {
   .swiper-card__products {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-        grid-template-areas: 'img description' 'img  description' 'img  footer';
+        grid-template-areas: 'img description' 'img  description' 'img  footer';
     gap: 20px;
   }
   .swiper-card__price {
@@ -3316,7 +3337,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 2rem;
-      grid-template-areas: "foto description" "foto main" "foto calculation" "foto .. ";
+      grid-template-areas: "foto description" "foto main" "foto calculation" "foto .. ";
   margin-top: 2rem;
 }
 
@@ -3574,7 +3595,7 @@ input {
 
 @media screen and (max-width: 1100px) {
   .card__main {
-        grid-template-areas: "description description" "foto foto" "foto foto" "main main" "calculation calculation";
+        grid-template-areas: "description description" "foto foto" "foto foto" "main main" "calculation calculation";
   }
   .card__header-title {
     width: 630px;
@@ -6578,7 +6599,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 16px;
-      grid-template-areas: 'img' 'description' 'footer';
+      grid-template-areas: 'img' 'description' 'footer';
 }
 
 .favorite-product__img-block {
@@ -6817,7 +6838,7 @@ input {
   .favorite-product {
     border-bottom: 1px solid #d2d2d2;
     padding: 20px 0;
-        grid-template-areas: 'img description' 'img description' 'img footer' 'img footer';
+        grid-template-areas: 'img description' 'img description' 'img footer' 'img footer';
     -webkit-column-gap: 3rem;
             column-gap: 3rem;
   }
@@ -7838,7 +7859,7 @@ input {
     padding: 1.5rem;
   }
   .feedback__form {
-        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
+        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
     gap: 4rem;
   }
   .feedback__form input {
@@ -8109,7 +8130,7 @@ input {
     padding: 1.5rem;
   }
   .write-review__form {
-        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
+        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
     gap: 4rem;
   }
   .write-review__form input {
@@ -9151,7 +9172,7 @@ input {
 .login-modal__content {
   z-index: 2900;
   display: none;
-      grid-template-areas: "title title" "label-email label-email" "input-email input-email" "label-pass remind" "input-pass input-pass" "btn-block btn-block";
+      grid-template-areas: "title title" "label-email label-email" "input-email input-email" "label-pass remind" "input-pass input-pass" "btn-block btn-block";
   position: relative;
   background: #fff;
   width: 480px;
@@ -9617,7 +9638,7 @@ input {
   padding: 68px 65px 100px;
 }
 
-.city__content .city__search {
+.city__search {
   border-radius: 32px;
   height: 50px;
   width: 100%;
@@ -9626,23 +9647,23 @@ input {
   font-size: 16px;
 }
 
-.city__content .city__search::-webkit-input-placeholder {
+.city__search::-webkit-input-placeholder {
   color: #5C596A;
 }
 
-.city__content .city__search:-ms-input-placeholder {
+.city__search:-ms-input-placeholder {
   color: #5C596A;
 }
 
-.city__content .city__search::-ms-input-placeholder {
+.city__search::-ms-input-placeholder {
   color: #5C596A;
 }
 
-.city__content .city__search::placeholder {
+.city__search::placeholder {
   color: #5C596A;
 }
 
-.city__content .city__search:hover {
+.city__search:hover {
   background: #cfd0d7;
 }
 
@@ -10060,6 +10081,7 @@ input {
   height: 50px;
   background: #EFF1F5;
   padding-left: 6.5rem;
+  padding-right: 1rem;
 }
 
 .search-empty__input-block input:hover {
@@ -10132,6 +10154,126 @@ input {
 @media screen and (max-width: 480px) {
   .search-page__result-item {
     font-size: 12px;
+  }
+}
+
+.search-result {
+  position: absolute;
+  z-index: 1000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 0;
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.5rem;
+  width: 60rem;
+  padding: 25px 0 25px 25px;
+  border: 1px solid #E2E2E2;
+  border-radius: 32px;
+  background: #fff;
+}
+
+.search-result__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
+.search-result__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.search-result__description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
+.search-result__link {
+  font-size: 16px;
+}
+
+.search-result__link:hover {
+  text-decoration: underline;
+  color: #10AE73;
+}
+
+.search-result__price {
+  font-size: 16px;
+}
+
+.search-result__price .favorite-product__price--former-price {
+  font-size: 10px;
+}
+
+.search-result__img {
+  border: 1px solid #E2E2E2;
+}
+
+.search-result__btn {
+  width: 175px;
+  height: 35px;
+  font-size: 12px;
+  font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.search-result__btn-cancel {
+  display: none;
+  font-size: 16px;
+  text-decoration: underline;
+  background: #fff;
+  color: #707070;
+}
+
+@media screen and (max-width: 1100px) {
+  .search-result {
+    width: 100%;
+  }
+  .search-result__btn-cancel.open {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .search-result {
+    width: 100vw;
+    margin-left: -3rem;
+    margin-top: 2rem;
+    border-radius: 0;
+    padding: 10px 0 10px 10px;
+  }
+  .search-result__btn-cancel {
+    font-size: 14px;
   }
 }
 
