--- a/styles/main.scss
+++ b/styles/main.scss
@@ -122,6 +122,7 @@
 
 @import "../styles/components/search-empty";
 @import "../styles/components/search-page";
+@import "../styles/components/search-result";
 
 // checkout page
 
