--- a/styles/components/_logo.scss
+++ b/styles/components/_logo.scss
@@ -4,7 +4,9 @@
   align-items: center;
   cursor: pointer;
   margin-right: 4rem;
-
+  &.hide {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1100px) {
